--- a/src/renderer/styles/Prompt.css
+++ b/src/renderer/styles/Prompt.css
@@ -8,7 +8,7 @@
   @apply mt-[20px] flex justify-between
 }
 .prompt > div > input {
-  @apply rounded-md px-[10px]
+  @apply ml-[10px] px-[10px] rounded-md
 }
 
 .prompt > p {
