--- a/src/renderer/styles/SideMenu.css
+++ b/src/renderer/styles/SideMenu.css
@@ -1,5 +1,5 @@
 .side-menu {
-  @apply w-[160px] h-full bg-deepBlue font-[600]
+  @apply w-[160px] h-full bg-deep-blue font-[600]
 }
 .side-menu > h1 {
   @apply w-full h-[60px] flex justify-center items-center text-[24px] text-white
@@ -11,21 +11,5 @@
   @apply w-full px-[20px]
 }
 .side-menu > div > a {
-  @apply mt-[140px] w-[120px] h-[120px] flex justify-center items-center rounded-md bg-lightBlue text-[18px] text-black/60
-}
-
-.password-prompt {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  z-index: 100;
-}
-
-.password-prompt input {
-  margin-right: 10px;
+  @apply mt-[140px] w-[120px] h-[120px] flex justify-center items-center rounded-md bg-light-blue text-[18px] text-black/60
 }
