feat:기본설정 보기, 변경 기능추가 완료

--- a/src/renderer/styles/AdminSetting.css
+++ b/src/renderer/styles/AdminSetting.css
@@ -10,7 +10,7 @@
   @apply text-[20px]
 }
 .admin-setting > div > input {
-  @apply w-[140px] h-[30px] pl-[10px]
+  @apply w-[140px] h-[30px] pl-[10px] border border-black/20
 }
 
 .admin-setting > div > button {
