feat/inquiry: 요구사항 테이블 생성 및 로직 수정

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>노은도서관 열람실 좌석예약 시스템</title>
+    <title>노은도서관 열람실 체크인 시스템</title>
   </head>
   <body>
     <div id="root"></div>
