--- a/src/renderer/styles/AdminLog.css
+++ b/src/renderer/styles/AdminLog.css
@@ -12,6 +12,21 @@
 .admin-log-list {
   @apply w-full h-[480px];
 }
+.admin-log-list > ul:nth-child(1) {
+  @apply h-[40px] grid grid-cols-8 text-[18px] items-center bg-light-blue;
+}
+.admin-log-list > ul:nth-child(1) > li {
+  @apply text-center;
+}
+.admin-log-list > ul:nth-child(2) {
+  @apply h-[440px] grid grid-rows-10;
+}
+.admin-log-list > ul:nth-child(2) > li {
+  @apply grid grid-cols-8 border-b-[2px] border-light-blue;
+}
+.admin-log-list > ul:nth-child(2) > li > span {
+  @apply flex justify-center items-center;
+}
 
 .admin-log-pagination {
   @apply w-full h-[40px] flex justify-center items-center;
